[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/UI/Components/NotificationList.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/Elements/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/ChatBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/Menus/Characters/CharacterColorEditor.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/theme/gdquest.theme" type="Theme" id=5]
[ext_resource path="res://src/UI/GameUI.gd" type="Script" id=6]

[node name="GameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 24.0, 1056.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 24.0, 1896.0 ]
}

[node name="ChangeColorButton" parent="." instance=ExtResource( 2 )]
margin_left = 24.0
margin_top = 24.0
margin_right = 224.0
margin_bottom = 84.0
rect_min_size = Vector2( 200, 60 )
text = "Change Color"

[node name="LogOutButton" parent="." instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -248.0
margin_top = -112.0
margin_right = -32.0
margin_bottom = -32.0
text = "Log out"
flat = true

[node name="ChatBox" parent="." instance=ExtResource( 3 )]
margin_left = 24.0
margin_top = -424.0
margin_right = 824.0
margin_bottom = -24.0

[node name="NotificationsUI" parent="." instance=ExtResource( 1 )]
margin_left = -424.0
margin_top = -104.0
margin_right = -24.0
margin_bottom = -24.0

[node name="CharacterColorEditor" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="pressed" from="ChangeColorButton" to="." method="_on_ChangeColorButton_pressed"]
[connection signal="pressed" from="LogOutButton" to="." method="_on_LogoutButton_pressed"]
[connection signal="editing" from="ChatBox" to="." method="_on_ChatBox_editing"]
[connection signal="text_sent" from="ChatBox" to="." method="_on_ChatBox_text_sent"]
[connection signal="color_changed" from="CharacterColorEditor" to="." method="_on_CharacterColorEditor_color_changed"]
